--- a/ref.bib
+++ b/ref.bib
@@ -18,7 +18,8 @@
   number={6},
   pages={062812},
   year={2014},
-  publisher={APS}
+  publisher={APS},
+  doi={10.1103/PhysRevE.90.062812}
 }
 
 @article{defries2010,
@@ -84,7 +85,8 @@
   number={5},
   pages={1641--1660},
   year={2011},
-  publisher={Copernicus GmbH}
+  publisher={Copernicus GmbH},
+  doi={10.5194/hess-15-1641-2011}
 }
 
 @article{fader2013,
@@ -115,7 +117,8 @@
   number={3},
   pages={445--458},
   year={2015},
-  publisher={Springer}
+  publisher={Springer},
+  doi={10.1007/s13412-015-0276-2}
 }
 
 @article{galloway2007,
@@ -133,8 +136,12 @@
 @article{gephart2016,
   title={Vulnerability to shocks in the global seafood trade network},
   author={Gephart, Jessica A and Brännströmm, Åke and Rovenskaya, Elena and Dieckmann, Ulf and Pace, Michael L},
-  journal={Environmental Research Letters},  
-  year={in press}
+  journal={Environmental Research Letters},
+  volume={11}
+  number={3},
+  pages={035008},
+  year={2016},
+  doi={10.1088/1748-9326/11/3/035008}
 }
 
 @article{godar2015,
@@ -144,7 +151,32 @@
   volume={112},
   pages={25--35},
   year={2015},
-  publisher={Elsevier}
+  publisher={Elsevier},
+  doi={10.1016/j.ecolecon.2015.02.003}
+}
+
+@article{gouel2013,
+  title={Rules versus discretion in food storage policies},
+  author={Gouel, Christophe},
+  journal={American Journal of Agricultural Economics},
+  volume={95},
+  number={4},
+  pages={1029--1044},
+  year={2013},
+  publisher={Oxford University Press},
+  doi={10.1093/ajae/aat016}
+}
+
+@article{gouel2015,
+  title={Optimal food price stabilization in a small open developing country},
+  author={Gouel, Christophe and Jean, S{\'e}bastien},
+  journal={The World Bank Economic Review},
+  volume={29},
+  number={1},
+  pages={72--101},
+  year={2015},
+  publisher={World Bank},
+  doi={10.1093/wber/lht018}
 }
 
 @article{hatfield2013,
@@ -155,7 +187,8 @@
   number={5},
   pages={966--1005},
   year={2013},
-  publisher={JSTOR}
+  publisher={JSTOR},
+  doi={10.1086/673402}
 }
 
 @article{headey2011,
@@ -166,7 +199,8 @@
   number={2},
   pages={136--146},
   year={2011},
-  publisher={Elsevier}
+  publisher={Elsevier},
+  doi={10.1016/j.foodpol.2010.10.003}
 }
 
 @book{hoekstra2008,
@@ -190,6 +224,17 @@ Organization (FAO) of the United Nations},
     author = {Michael C. J. Kao and Markus Gesmann and Filippo Gheri},
     year = {2015},
     note = {R package version 2.0}
+}
+
+@article{laio2016,
+  title={The past and future of food stocks},
+  author={Laio, Francesco and Ridolfi, Luca and D'Odorico, Paolo},
+  journal={Environmental Research Letters},
+  volume={11}
+  number={3},
+  pages={035010},
+  year={2016},
+  doi={10.1088/1748-9326/11/3/035010}
 }
 
 @article{lee2011,
@@ -221,7 +266,8 @@ Organization (FAO) of the United Nations},
   volume={54},
   pages={239--241},
   year={2014},
-  publisher={Elsevier}
+  publisher={Elsevier},
+  doi={10.1016/j.geoforum.2013.04.019}
 }
 
 @article{meyfroidt2013,
@@ -256,7 +302,8 @@ Organization (FAO) of the United Nations},
   number={1},
   pages={167--194},
   year={2016},
-  publisher={Taylor \& Francis}
+  publisher={Taylor \& Francis},
+  doi={10.1080/03066150.2014.993625}
 }
 
 @article{pielou1966,
@@ -278,7 +325,8 @@ Organization (FAO) of the United Nations},
   number={2},
   pages={119--129},
   year={2009},
-  publisher={Elsevier}
+  publisher={Elsevier},
+  doi={10.1016/j.foodpol.2009.01.001}
 }
 
 @article{porkka2013,
