--- a/ref.bib
+++ b/ref.bib
@@ -137,7 +137,7 @@
   title={Vulnerability to shocks in the global seafood trade network},
   author={Gephart, Jessica A and Brännströmm, Åke and Rovenskaya, Elena and Dieckmann, Ulf and Pace, Michael L},
   journal={Environmental Research Letters},
-  volume={11}
+  volume={11},
   number={3},
   pages={035008},
   year={2016},
@@ -230,7 +230,7 @@ Organization (FAO) of the United Nations},
   title={The past and future of food stocks},
   author={Laio, Francesco and Ridolfi, Luca and D'Odorico, Paolo},
   journal={Environmental Research Letters},
-  volume={11}
+  volume={11},
   number={3},
   pages={035010},
   year={2016},
